# kyyn-plugins

./: Cargo.toml  LICENSE-MIT  README.md  kindred-tap.ron  kyyn-tap.ron  rust-toolchain.toml
.github/workflows/: check.yml
crates/kindred-plugin-git/: Cargo.toml
crates/kindred-plugin-git/src/: lib.rs
crates/kindred-plugin-graph/: Cargo.toml  README.md
crates/kindred-plugin-graph/src/: auth.rs  chat.rs  client.rs  config.rs  graph.rs  inbox.rs  lib.rs  sharepoint.rs  sync.rs  transcript.rs  urls.rs
crates/kindred-plugin-kb/: Cargo.toml  README.md
crates/kindred-plugin-kb/src/: lib.rs
crates/kindred-plugin-salesforce/: Cargo.toml
crates/kindred-plugin-salesforce/src/: lib.rs
crates/kindred-plugin-sweep/: Cargo.toml  README.md
crates/kindred-plugin-sweep/src/: lib.rs
crates/kyyn-plugin-git/: Cargo.toml
crates/kyyn-plugin-git/src/: lib.rs
crates/kyyn-plugin-graph/: Cargo.toml  README.md
crates/kyyn-plugin-graph/src/: auth.rs  client.rs  config.rs  graph.rs  inbox.rs  lib.rs  sharepoint.rs  sync.rs  transcript.rs  urls.rs  window.rs
crates/kyyn-plugin-kb/: Cargo.toml  README.md
crates/kyyn-plugin-kb/src/: lib.rs
crates/kyyn-plugin-pack/: Cargo.toml
crates/kyyn-plugin-pack/src/: lib.rs
crates/kyyn-plugin-salesforce/: Cargo.toml
crates/kyyn-plugin-salesforce/src/: lib.rs
crates/kyyn-plugin-sweep/: Cargo.toml  README.md
crates/kyyn-plugin-sweep/src/: lib.rs
src/: main.rs
