# The first-party kindred tap: sweep, kb, and the Microsoft Graph family,
# served over the tap harness. This repo is never published to crates.io —
# KBs pin it (repo, rev) in sources.ron and build it on first use.
[package]
name = "kindred-plugins"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
kindred-core = "0.1.8"
kindred-plugin-git = { path = "crates/kindred-plugin-git" }
kindred-plugin-graph = { path = "crates/kindred-plugin-graph" }
kindred-plugin-kb = { path = "crates/kindred-plugin-kb" }
kindred-plugin-salesforce = { path = "crates/kindred-plugin-salesforce" }
kindred-plugin-sweep = { path = "crates/kindred-plugin-sweep" }

[workspace]
members = ["crates/kindred-plugin-git", "crates/kindred-plugin-graph", "crates/kindred-plugin-kb", "crates/kindred-plugin-salesforce", "crates/kindred-plugin-sweep"]
