# The first-party kyyn tap: sweep, kb, and the Microsoft Graph family,
# served over the tap harness. This repo is never published to crates.io —
# KBs pin it (repo, rev) in sources.ron and build it on first use.
[package]
name = "kyyn-plugins"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
kyyn-core = "0.1.11"
kyyn-plugin-git = { path = "crates/kyyn-plugin-git" }
kyyn-plugin-graph = { path = "crates/kyyn-plugin-graph" }
kyyn-plugin-kb = { path = "crates/kyyn-plugin-kb" }
kyyn-plugin-salesforce = { path = "crates/kyyn-plugin-salesforce" }
kyyn-plugin-sweep = { path = "crates/kyyn-plugin-sweep" }

[dev-dependencies]
ron = "0.12"
serde = { version = "1", features = ["derive"] }

[workspace]
members = ["crates/kyyn-plugin-git", "crates/kyyn-plugin-graph", "crates/kyyn-plugin-kb", "crates/kyyn-plugin-salesforce", "crates/kyyn-plugin-sweep"]
