[package]
name = "kindred-plugin-git"
version = "0.1.0"
edition = "2024"
description = "Git repository source plugin for kindred: any repo's tree (local or remote) as hashed, versioned evidence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/drshade/kindred-plugins-core"
publish = false

[dependencies]
kindred-core = "0.1.8"
glob = "0.3"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
