[package]
name = "kindred-plugin-kb"
version = "0.1.0"
edition = "2024"
description = "Federation source plugin for kindred: another kindred knowledge base's git repo as hashed, curatable evidence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/drshade/kindred-plugins-core"

publish = false

[dependencies]
kindred-core = "0.1.9"
serde = { version = "1", features = ["derive"] }
ron = "0.12"
sha2 = "0.10"
glob = "0.3"
regex-lite = "0.1"
tempfile = "3"
