[package]
name = "kindred-plugin-salesforce"
version = "0.1.0"
edition = "2024"
description = "Salesforce source plugin for kindred: a SOQL query's records as hashed evidence, via a Connected App device-flow sign-in."
license = "MIT OR Apache-2.0"
repository = "https://github.com/drshade/kindred-plugins-core"
publish = false

[dependencies]
kindred-core = "0.1.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
