[package]
name = "kyyn-plugin-graph"
version = "0.1.0"
edition = "2024"
description = "Microsoft Graph source plugin for kyyn: mail, calendar, Teams chats, transcripts and attachments as hashed evidence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/drshade/kyyn-plugins"

publish = false

[dependencies]
sha2 = "0.10"
libc = "0.2"
kyyn-core = "0.1.10"
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
