[package]
name = "kyyn-plugin-kb"
version = "0.1.0"
edition = "2024"
description = "Federation source plugin for kyyn: another kyyn knowledge base's git repo as hashed, curatable evidence."
license = "MIT OR Apache-2.0"
repository = "https://github.com/drshade/kyyn-plugins"

publish = false

[dependencies]
kyyn-core = "0.1.11"
serde = { version = "1", features = ["derive"] }
ron = "0.12"
sha2 = "0.10"
glob = "0.3"
regex-lite = "0.1"
tempfile = "3"
